--- a/Calculator/styles.css
+++ b/Calculator/styles.css
@@ -1,6 +1,6 @@
 .calculator {
 	padding: 15px;
-	width: 600px;
+	width: 550px;
 	margin: auto;
 	border-radius: 10px;
 	display: flex;
@@ -13,13 +13,14 @@
 	text-align: center;
 }
 .calculator__input {
-	width: 85%;
+	width: 80%;
 	background-color: rgb(63, 152, 122);
 	display: flex;
 	height: 35px;
 	border-radius: 5px;
 	margin: auto;
 	font-size: 30px;
+	padding: 10px;
 }
 
 table {
@@ -29,7 +30,7 @@ table {
 button {
 	font-size: 40px;
 	background-color: cadetblue;
-	width: 123px;
+	width: 110px;
 	height: 60px;
 }
 
