--- a/Calculator/styles.css
+++ b/Calculator/styles.css
@@ -1,4 +1,11 @@
+* {
+	border: none;
+}
+
 .calculator {
+	box-shadow: inset 10px 10px 15px rgb(72, 72, 72),
+		inset -10px -10px 15px rgb(27, 27, 27);
+
 	padding: 15px;
 	width: 550px;
 	margin: auto;
@@ -6,11 +13,15 @@
 	display: flex;
 	flex-direction: column;
 	/* align-items: center; */
-	background-color: rgb(79, 79, 79);
+	background-color: rgb(43, 43, 43);
 	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 .calculator__title {
-	text-align: center;
+	/* text-align: center; */
+	width: 80%;
+	margin: 20px auto;
+	color: rgb(117, 116, 116);
+	text-transform: uppercase;
 }
 .calculator__input {
 	width: 80%;
@@ -21,6 +32,11 @@
 	margin: auto;
 	font-size: 30px;
 	padding: 10px;
+	box-shadow: inset 2px 2px 5px rgb(55, 55, 55);
+	border-top: rgb(43, 43, 43) 1px solid;
+	border-left: 1px solid rgb(43, 43, 43);
+	border-bottom: 0.1px solid rgb(139, 137, 137);
+	font-family: "Orbitron", sans-serif;
 }
 
 table {
@@ -29,9 +45,20 @@ table {
 
 button {
 	font-size: 40px;
-	background-color: cadetblue;
+	background-color: grey;
 	width: 110px;
+	margin: 1px;
 	height: 60px;
+	border-radius: 10px;
+	box-shadow: inset 2px 2px 2px, inset -2px -2px 1px rgb(169, 169, 169),
+		2px 2px 5px;
+	cursor: pointer;
+}
+button:active {
+	transform: translate(1px, 1px) scale(0.97);
+	transform-origin: bottom left;
+	box-shadow: inset 1px 1px 2px, inset -2px -2px 3px rgb(169, 169, 169),
+		1px 1px 3px;
 }
 
 .calculator__number-container {
