--- a/Calculator/styles.css
+++ b/Calculator/styles.css
@@ -4,10 +4,11 @@
 
 .calculator {
 	box-shadow: inset 10px 10px 15px rgb(72, 72, 72),
-		inset -10px -10px 15px rgb(27, 27, 27);
+		inset -10px -10px 15px rgb(27, 27, 27), 5px 5px 10px;
 
 	padding: 15px;
 	width: 550px;
+
 	margin: auto;
 	border-radius: 10px;
 	display: flex;
@@ -37,6 +38,10 @@
 	border-left: 1px solid rgb(43, 43, 43);
 	border-bottom: 0.1px solid rgb(139, 137, 137);
 	font-family: "Orbitron", sans-serif;
+	outline: 3px solid rgb(34, 34, 34, 0.5);
+}
+.calculator__input:focus {
+	outline: none;
 }
 
 table {
