--- a/Snake/css/style.css
+++ b/Snake/css/style.css
@@ -4,8 +4,11 @@
 	box-sizing: border-box;
 }
 .snake__title {
-	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-		sans-serif;
+	font-family: "VT323", monospace;
+	text-transform: uppercase;
+	text-align: center;
+	color: antiquewhite;
+	margin-bottom: 20px;
 }
 .snake__container {
 	min-height: 100vh;
