--- a/Carousel/style.css
+++ b/Carousel/style.css
@@ -49,6 +49,28 @@
 	position: relative;
 	overflow-x: hidden;
 }
+.upload-button {
+	margin: 20px auto;
+	width: 200px;
+	height: 50px;
+	border-radius: 10px;
+	border: none;
+	justify-self: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-weight: bold;
+	text-transform: uppercase;
+	background-color: #2f2f2f;
+	transition-duration: 0.3s;
+	cursor: pointer;
+	color: rgb(174, 173, 173);
+	box-shadow: 2px 5px 5px rgb(157, 156, 156);
+	/* text-align: center; */
+}
+.upload-button:hover {
+	background-color: #131313;
+}
 
 .carousel__track {
 	padding: 0;
@@ -80,10 +102,12 @@
 	margin: 0 7px;
 	opacity: 0.4;
 	cursor: pointer;
+	transform: scale(0.9);
 }
 .carousel__indicator:hover {
 	opacity: 0.6;
 }
 .carousel__indicator--current-slide {
 	opacity: 0.8 !important;
+	transform: scale(1.2);
 }
