--- a/quotes/styles.css
+++ b/quotes/styles.css
@@ -11,6 +11,8 @@ body {
 .quotes__header {
 	text-align: center;
 	margin-top: 50px;
+	font-weight: 700;
+	font-size: 50px;
 }
 .quotes__container {
 	display: flex;
@@ -42,14 +44,52 @@ body {
 	border-radius: 10px;
 	height: 50px;
 	background-color: #171717;
+	text-transform: uppercase;
 }
 .quotes__button:hover {
 	transform: translateY(-5px);
 	box-shadow: rgb(23, 23, 23, 0.3) 0 5px 8px;
 }
 .quotes__button-container {
-	width: 100%;
+	/* width: 100%; */
 	display: flex;
 	justify-content: center;
 	margin: 100px 0;
+}
+.quotes__loader {
+	height: 30px;
+	width: 30px;
+	border-radius: 100px;
+	/* border-top: 3px solid #171717; */
+	margin: auto;
+	background: linear-gradient(
+		to bottom,
+		#171717 0 30%,
+		rgb(164, 163, 163) 30% 100%
+	);
+	position: relative;
+	animation: rotate-loader 2s linear infinite;
+}
+@keyframes rotate-loader {
+	from {
+		transform: rotate(0deg);
+	}
+	30% {
+		transform: rotate(180deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+.quotes__loader::after {
+	content: " ";
+	background-color: white;
+	height: 22px;
+	width: 22px;
+	z-index: 2;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	border-radius: 100%;
 }
