--- a/quotes/styles.css
+++ b/quotes/styles.css
@@ -13,6 +13,7 @@ body {
 	margin-top: 50px;
 	font-weight: 700;
 	font-size: 50px;
+	text-shadow: rgb(23, 23, 23, 0.3) 5px 5px 3px;
 }
 .quotes__container {
 	display: flex;
