--- a/quotes/styles.css
+++ b/quotes/styles.css
@@ -60,14 +60,12 @@ body {
 .quotes__loader {
 	height: 30px;
 	width: 30px;
+	border: 4px solid rgb(128, 128, 128, 0.5);
 	border-radius: 100px;
 	/* border-top: 3px solid #171717; */
+	border-top: #171717 5px solid;
 	margin: auto;
-	background: linear-gradient(
-		to bottom,
-		#171717 0 30%,
-		rgb(164, 163, 163) 30% 100%
-	);
+	background-color: white;
 	position: relative;
 	animation: rotate-loader 2s linear infinite;
 }
@@ -82,7 +80,7 @@ body {
 		transform: rotate(360deg);
 	}
 }
-.quotes__loader::after {
+/* .quotes__loader::after {
 	content: " ";
 	background-color: white;
 	height: 22px;
@@ -93,4 +91,4 @@ body {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	border-radius: 100%;
-}
+} */
