--- a/quotes/styles.css
+++ b/quotes/styles.css
@@ -19,6 +19,9 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 }
+.quotes__loader-container {
+	width: 100%;
+}
 .card__container {
 	background-color: rgb(234, 229, 229);
 	margin: 20px;
@@ -46,6 +49,7 @@ body {
 	height: 50px;
 	background-color: #171717;
 	text-transform: uppercase;
+	font-weight: bold;
 }
 .quotes__button:hover {
 	transform: translateY(-5px);
@@ -58,6 +62,7 @@ body {
 	margin: 100px 0;
 }
 .quotes__loader {
+	display: block;
 	height: 30px;
 	width: 30px;
 	border-radius: 100px;
@@ -93,4 +98,32 @@ body {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	border-radius: 100%;
+}
+.pagination__container {
+	height: 50px;
+	width: 80%;
+	display: none;
+	/* outline: 1px solid red; */
+	justify-content: center;
+	align-items: center;
+	margin: 10px auto;
+}
+.pagination__button {
+	height: 30px;
+	width: 30px;
+	margin: 5px;
+	background-color: white;
+	transition-duration: 0.3s;
+	cursor: pointer;
+	border: 2px solid #171717;
+	border-radius: 100%;
+}
+.pagination__button:hover {
+	background-color: rgb(23, 23, 23, 0.7);
+	color: white;
+	border: 0px solid rgb(23, 23, 23, 0.7);
+}
+.pagination__button--active {
+	background-color: #171717 !important;
+	color: white;
 }
